--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html lang="en">
    <head>
-      <title>Battlepass NFT - Midnite</title>
+      <title>Slabbed.xyz</title>
 
       <meta charset="utf-8">
       <meta name="description" content="Level up your esports &amp; sports betting with Midnite, where gamers reign. Watch and bet on live streams, unlock huge promos, and instantly withdraw your winnings. Get the best odds and bet on CSGO, Football, League of Legends, DOTA 2, Call of Duty and other top games. Join today and begin your journey." data-hid="description">
