Drop intro text

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
       <center>
          <h1 class="font-slab font-extrabold italic uppercase text-6xl sm:text-6xl leading-100 mt-5 sm:text-center text-center">Preserve your<br />NFT forever</h1>
          <p class="font-sans font-normal text-lg leading-copy mt-10 max-w-lg sm:text-center text-center">
-            Elevator pitch coming soon!
+            &nbsp;
          </p>
 
          <p>&nbsp;</p>
